--- a/.github/workflows/ContinuousDelivery.yml
+++ b/.github/workflows/ContinuousDelivery.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: ContinuousDelivery
 
 # Controls when the workflow will run
 on:
@@ -25,12 +25,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Clone a repo
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          git clone https://github.com/farrukh90/nodejs
+
+
