--- a/.github/workflows/ContinuousDelivery.yml
+++ b/.github/workflows/ContinuousDelivery.yml
@@ -46,3 +46,10 @@ jobs:
         run: |
           docker build -t nodejs:1.0.0   . 
 
+
+      # Runs a set of commands using the runners shell
+      - name: Tag Image
+        working-directory: nodejs
+        run: |
+          docker image tag nodejs:1.0.0 us-central1-docker.pkg.dev/csubrsnzorjkvdca/nodejs/nodejs:1.0.0     
+
