--- a/.github/workflows/ContinuousDelivery.yml
+++ b/.github/workflows/ContinuousDelivery.yml
@@ -2,7 +2,7 @@
 
 name: ContinuousDelivery
 
-envs:
+env:
   project_id: "csubrsnzorjkvdca"
   repo: https://github.com/farrukh90/nodejs
   image_tag: 1.0.0
