--- a/.github/workflows/ContinuousDelivery.yml
+++ b/.github/workflows/ContinuousDelivery.yml
@@ -1,7 +1,10 @@
 # This is a basic workflow to help you get started with Actions
 
 name: ContinuousDelivery
-
+env:
+  project_id: "csubrsnzorjkvdca"
+  repos: "https://github.com/farrukh90/nodejs"
+  image_tag: "1.0.0"
 
 
 # Controls when the workflow will run
@@ -21,10 +24,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    env:
-      project_id: "csubrsnzorjkvdca"
-      repo: "https://github.com/farrukh90/nodejs"
-      image_tag: "1.0.0"
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
