--- a/.github/workflows/ContinuousDelivery.yml
+++ b/.github/workflows/ContinuousDelivery.yml
@@ -1,10 +1,10 @@
-# This is a basic workflow to help you get started with Actions
-
-name: ContinuousDelivery
-
 env:
   project_id: "csubrsnzorjkvdca"
+  repo: "https://github.com/farrukh90/nodejs"
 
+
+
+name: ContinuousDelivery
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
@@ -33,7 +33,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Clone a repo
         run: |
-          git clone https://github.com/farrukh90/nodejs
+          git clone ${{ env.repo }}
 
 
       # Runs a set of commands using the runners shell
