--- a/.github/workflows/ContinuousDelivery.yml
+++ b/.github/workflows/ContinuousDelivery.yml
@@ -3,6 +3,7 @@ env:
   app_name:     "nodejs"
   app_version:  "2.0.0"
   repo:         "https://github.com/farrukh90/nodejs"
+  repo_region: "us-central1"
 
 
 
