--- a/.github/workflows/CDeployment.yml
+++ b/.github/workflows/CDeployment.yml
@@ -1,4 +1,8 @@
-name: ContinuousDeployment
+env:
+  project_id:   "csubrsnzorjkvdca"
+  
+  
+  name: ContinuousDeployment
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
@@ -24,7 +28,41 @@ jobs:
       - uses: actions/checkout@v3
 
 
+      - name: Authenticate to Google account
+        run: |
+          gcloud auth activate-service-account --key-file="service-account.json"
+          gcloud config set project ${{ env.project_id }}
+
+
+
+      # Runs a set of commands using the runners shell
+      - name: Initialize
+        run: |
+          terraform init 
+
+
+
+
+
+      # Runs a set of commands using the runners shell
+      - name: Create workspace
+        run: |
+          terraform workspace  select  dev   ||  terraform workspace  new  dev
+
+
+
+      - name: Login to GCR
+        run: |
+          gcloud auth configure-docker  us-central1-docker.pkg.dev
+       
+
+
+
       # Runs a set of commands using the runners shell
       - name: Clone a repo
         run: |
-          echo "Hello"
+          terraform apply     --auto-approve
+
+
+          
+          
