--- a/.github/workflows/CDeployment.yml
+++ b/.github/workflows/CDeployment.yml
@@ -28,12 +28,21 @@ jobs:
       - uses: actions/checkout@v3
 
 
-      - name: Authenticate to Google account
+###############     Below commands a for GCP authentication
+      # Authenticate to GCP
+      - name: Authenticate to GCP
         run: |
           gcloud auth activate-service-account --key-file="service-account.json"
-          gcloud config set project ${{ env.project_id }}
-
-
+      # Set GCP Project
+      - name: Set GCP Project
+        run: |
+          gcloud config set project ulonhjeeyzpdjsvz
+      # Get k8s credentials
+      - name: Get k8s credentials
+        run: |
+          gcloud container clusters get-credentials project-cluster --region us-central1
+          kubectl get nodes
+###############      Below commands are for deploying app
 
       # Runs a set of commands using the runners shell
       - name: Initialize
