--- a/.github/workflows/CDeployment.yml
+++ b/.github/workflows/CDeployment.yml
@@ -74,6 +74,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Clone a repo
         run: |
+          gcloud container clusters get-credentials project-cluster --region us-central1
           terraform apply     --auto-approve
 
 
