--- a/.github/workflows/CDeployment.yml
+++ b/.github/workflows/CDeployment.yml
@@ -76,6 +76,7 @@ jobs:
         run: |
           gcloud container clusters get-credentials project-cluster --region us-central1
           ls -la 
+          cat ~/.kube/config
           terraform apply     --auto-approve
 
 
