--- a/.github/workflows/CDeployment.yml
+++ b/.github/workflows/CDeployment.yml
@@ -2,14 +2,15 @@ env:
   project_id:   "csubrsnzorjkvdca"
   
   
-  name: ContinuousDeployment
-# Controls when the workflow will run
+name: ContinuousDeployment
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_run:
+    workflows: ["ContinuousDelivery"]
+    types:
+      - completed
+
+
+
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
