--- a/.github/workflows/ContinuousDelivery.yml
+++ b/.github/workflows/ContinuousDelivery.yml
@@ -1,9 +1,9 @@
 env:
   project_id:   "csubrsnzorjkvdca"
-  app_name:     "nodejs"
+  app_name:     "artemis"
   app_version:  "2.0.0"
   tag_app_version: "latest"
-  repo:         "https://github.com/farrukh90/nodejs"
+  repo:         "https://github.com/farrukh90/artemis"
   repo_region:  "us-central1"
 
 
