--- a/charts/application/templates/deployment.yaml
+++ b/charts/application/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 5000
+              containerPort: "{{ .Values.service.port }}"
               protocol: TCP
           livenessProbe:
             httpGet:
